solving part 1 and 2

--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "type": "module",
+  "scripts": {
+    "solve": "node --no-warnings --experimental-strip-types"
+  },
   "dependencies": {
     "@types/node": "^22.10.1"
   }
